fix alignment

--- a/index.css
+++ b/index.css
@@ -9,8 +9,12 @@ body {
     color: #D9D9D9;
     padding: 20px;
     height: 100vh;
+}
+
+main {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
@@ -32,12 +36,16 @@ header > p {
 }
 
 section.game-status {
-    background-color: #10A95B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     max-width: 400px;
+    min-height: 60px;
     text-align: center;
     color: #F9F4DA;
-    margin: 10px auto;
     border-radius: 5px;
+    margin-block: 30px;
 }
 
 section.game-status > h2 {
